--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,6 @@ h2 {
   max-width: 1200px;
   width: 100%;
   min-width: 880.2px;
-  padding-left: 2.3%;
-  padding-right: 2.3%;
-  box-sizing: border-box;
   background-color: firebrick;
 }
 
@@ -57,6 +54,7 @@ h2 {
 .gs-logo {
   float: left;
   width: 154px;
+  margin-left: 2.3%;
   margin-right: 30px;
   padding: 10px 0;
 }
@@ -78,6 +76,7 @@ h2 {
 .gs-userblock {
   position: relative;
   float: right;
+  margin-right: 2.3%;
 }
 
 .gs-search {
@@ -115,10 +114,11 @@ h2 {
 
 .gs-slider {
   text-align: center;
+  margin-left: 2.3%;
+  margin-right: 2.3%;
 }
 
 .gs-banner {
-  width: 100;
   background-color: chocolate;
 }
 
@@ -129,6 +129,8 @@ h2 {
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 24px;
+  box-sizing: border-box;
+  border-radius: 10px;
 }
 
 .gs-banner-item h3 {
@@ -150,16 +152,16 @@ h2 {
 
 .gs-banner-cta {
   text-align: right;
-  margin-bottom: 25px;
 }
 
 .gs-banner-item:first-child {
   margin-right: 2.2%;
-  background: url("../img/tmp/banner1.png") no-repeat;
+  margin-left: 2.3%;
+  background: url("../img/tmp/banner1.jpg") no-repeat;
 }
 
 .gs-banner-item:last-child {
-  background: url("../img/tmp/banner2.png") no-repeat;
+  background: url("../img/tmp/banner2.jpg") no-repeat;
 }
 
 .gs-products {
@@ -170,8 +172,16 @@ h2 {
 
 .gs-products-item {
   display: inline-block;
+  vertical-align: top;
   width: 22.2%;
   margin-right: 2.2%;
+  margin-bottom: 42px;
+}
+
+.gs-products-item:nth-child(1),
+.gs-products-item:nth-child(5),
+.gs-products-item:nth-child(9) {
+  margin-left: 2.3%;
 }
 
 .gs-products-item:last-child {
@@ -203,6 +213,10 @@ h2 {
   text-align: center;
 }
 
+.gs-breadcrumbs {
+  margin-left: 2.3%;
+}
+
 .gs-breadcrumbs ul {
   margin: 0;
   padding: 0;
@@ -214,7 +228,9 @@ h2 {
 
 .gs-info {
   padding-top: 30px;
-  padding-left: 20px;
+  padding-left: 21px;
+  margin-left: 2.3%;
+  margin-right: 2.3%;
   margin-bottom: 40px;
   background: url("../img/info-bg.jpg");
   border-radius: 15px;
@@ -227,28 +243,29 @@ h2 {
 }
 
 .gs-info-item {
+  position: relative;
   display: inline-block;
+  width: 46.6%;
   font-size: 0;
   vertical-align: top;
-  width: 46.6%;
-  margin-right: 2.2%;
 }
 
 .gs-info-item img {
-  display: block;
-  float: left;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: inline-block;
   width: 49px;
-  margin-right: 7px;
 }
 
 .gs-info-item p {
-  float: left;
-  width: 70%;
+  display: inline-block;
+  padding-left: 56px;
   font-size: 16px;
 }
 
-.gs-info-item:nth-child(2n) {
-  margin-right: 0;
+.gs-info-item:nth-of-type(odd) {
+  margin-right: 2.2%;
 }
 
 .gs-marketing {
@@ -262,9 +279,10 @@ h2 {
   width: 46.6%;
   padding-top: 26px;
   padding-left: 20px;
+  margin-left: 2.3%;
   margin-right: 2.2%;
-  background: url("../img/tmp/blog-item.jpg") no-repeat;
-  
+  box-sizing: border-box;
+  background-color: blue;
 }
 
 .gs-subscribe {
@@ -274,15 +292,104 @@ h2 {
   padding-left: 21px;
   padding-right: 27px;
   padding-bottom: 35px; 
-  background-color: #f8f7f4;
+  margin-right: 2.3%;
+  box-sizing: border-box;
+  background-color: cyan;
   border-radius: 10px;
 }
 
 .gs-subscribe p {
   margin: 0;
+  padding: 0;
+}
+
+.gs-contacts {
+  position: relative;
+  width: 100%;
+  height: 430px;
+  background-color: cornsilk;
+}
+
+.gs-contacts-info {
+  position: absolute;
+  right: 2.3%;
+  top: 14.7%;
+  padding-top: 32px;
+  padding-left: 25px;
+  background-color: rgba(255, 255, 255, 0.98);
+  border-radius: 15px;
 }
 
 /*CATALOG*/
+
+.gs-catalog-title {
+  margin-left: 2.3%;
+  margin-right: 2.3%;
+}
+
+.gs-filter {
+  margin-left: 2.3%;
+  margin-right: 2.3%;
+  background-color: cornflowerblue;
+}
+
+.gs-filter-form-sort {
+  float: left;
+  width: 22.2%;
+  margin-right: 1.2%;
+  background-color: burlywood;
+}
+
+.gs-filter-form-sort label {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.gs-filter-form-price {
+  float: left;
+  width: 25.5%;
+  margin-right: 1.1%;
+  background-color: cadetblue;
+}
+
+.gs-filter-form-price label {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.gs-filter-form-fatness {
+  float: right;
+  width: 50%;
+  background-color: chartreuse;
+}
+
+.gs-filter-form-fatness label:first-child {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.gs-filter-form-filler {
+  float: left;
+  width: 78%;
+  background-color: coral;
+}
+
+.gs-filter-form-filler label:first-child {
+  display: block;
+  margin-bottom: 6px;
+}
+
+.gs-filter-form-btn {
+  float: right;
+  width: 22%;
+  text-align: right;
+}
+
+.gs-paging {
+  background-color: coral;
+  margin-right: 2.3%;
+  margin-left: 2.3%;
+}
 
 .gs-paging ul {
   margin: 0;
@@ -294,35 +401,13 @@ h2 {
   display: inline-block;
 }
 
-.gs-filter-form-sort {
-  float: left;
-  width: 22.2%;
-}
-
-.gs-filter-form-price {
-  float: left;
-  width: 25.5%;
-  margin-right: 1.1%;
-}
-
-.gs-filter-form-fatness {
-  float: left;
-  width: 46.6%;
-}
-
-.gs-filter-form-filler {
-  float: left;
-}
-
-.gs-filter-form-btn {
-  float: right;
-}
 
 /*FOOTER*/
 
 .gs-footer-socials {
   float: left;
   width: 22.2%;
+  margin-left: 2.3%;
   margin-right: 2.2%;
 }
 
@@ -332,11 +417,20 @@ h2 {
   margin-right: 2.2%;
 }
 
+.gs-footermenu ul {
+  margin: 0;
+  font-size: 0;
+}
+
 .gs-footermenu li {
   display: inline-block;
+  vertical-align: top;
+  font-size: 13px;
+  width: 175px;
 }
 
 .gs-author {
   float: right;
   width: 22.2%;
+  margin-right: 2.3%;
 }
