--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,16 @@ body {
   font-weight: normal;
   font-family: "Roboto", "Arial", sans-serif;
   color: #323232;
-  background-color: #99aea2;
+  background-color: #849d8f;
+}
+
+.gs-bgbody {
+  -webkit-transition: background 0.5s ease-in;
+  transition: background 0.5s ease-in;
+}
+
+body > input[type="radio"] {
+  display: none;
 }
 
 h1 {
@@ -96,9 +105,10 @@ h2 {
   border-bottom-color: rgba(232,77,55, 0.3);
 }
 
-  /*GENERAL INPUTS' STYLES*/
+  /*GENERAL FORM STYLES*/
 
-.gs-input {
+.gs-input,
+.gs-textarea {
   position: relative;
   padding: 15px;
   font-size: 16px;
@@ -111,38 +121,45 @@ h2 {
   outline: 0;
 }
 
-.gs-input:hover {
+.gs-input:hover,
+.gs-textarea:hover {
   padding: 14px;
   border-width: 2px;
 }
 
-.gs-input:focus {
+.gs-input:focus,
+.gs-textarea:focus {
   padding: 14px;
   border-width: 2px;
   border-color: rgba(46,136,228, 0.52);
 }
 
-.gs-input::-webkit-input-placeholder {
+.gs-input::-webkit-input-placeholder,
+.gs-textarea::-webkit-input-placeholder {
   color: #999999;
   font-weight: 400;
 }
 
-.gs-input:-moz-placeholder {
+.gs-input:-moz-placeholder,
+.gs-textarea:-moz-placeholder {
   color: #999999;
   font-weight: 400;
 }
 
-.gs-input::-moz-placeholder {
+.gs-input::-moz-placeholder,
+.gs-textarea::-moz-placeholder {
   color: #999999;
   font-weight: 400;
 }
 
-.gs-input:-ms-input-placeholder {
+.gs-input:-ms-input-placeholder,
+.gs-textarea:-ms-input-placeholder {
   color: #999999;
   font-weight: 400;
 }
 
-.gs-input:focus::-webkit-input-placeholder {
+.gs-input:focus::-webkit-input-placeholder,
+.gs-textarea:focus::-webkit-input-placeholder {
   position: relative;
   left: 0;
   top: -40px;
@@ -151,7 +168,8 @@ h2 {
   color: #5b9ddf;
 }
 
-.gs-input:focus:-moz-placeholder {
+.gs-input:focus:-moz-placeholder,
+.gs-textarea:focus:-moz-placeholder {
   position: absolute;
   left: 0;
   top: -20px;
@@ -159,7 +177,9 @@ h2 {
   line-height: 13px;
   color: #5b9ddf;
 }
-.gs-input:focus::-moz-placeholder {
+
+.gs-input:focus::-moz-placeholder,
+.gs-textarea:focus::-moz-placeholder {
   position: relative;
   left: 0;
   top: -20px;
@@ -168,7 +188,8 @@ h2 {
   color: #5b9ddf;
 }
 
-.gs-input:focus:-ms-input-placeholder {
+.gs-input:focus:-ms-input-placeholder,
+.gs-textarea:focus:-ms-input-placeholder {
   position: absolute;
   left: 0;
   top: -20px;
@@ -180,6 +201,12 @@ h2 {
 /*END GENERAL*/
 
 /*HEADER*/
+
+.gs-mainheader {
+  position: relative;
+  z-index: 200;
+}
+
   /*LOGO*/
 
 .gs-logo {
@@ -199,7 +226,7 @@ h2 {
 
 .gs-mainmenu {
   float: left;
-  max-width: 50%;
+  max-width: 55%;
 }
 
 .gs-mainmenu>ul {
@@ -344,6 +371,7 @@ h2 {
   float: right;
   width: 22.8%;
   padding: 20px 0;
+  font-size: 0;
 }
 
 .gs-top-btn {
@@ -412,6 +440,7 @@ h2 {
 
 .gs-search-form input[type="text"] {
   width: 311px;
+  font-size: 14px;
 }
 
 .gs-search:hover + .gs-search-form {
@@ -449,7 +478,7 @@ h2 {
 .gs-login-popup {
   position: absolute;
   top: 60px;
-  right: 130px;
+  right: 120px;
   display: none;
   padding: 20px;
   background-color: #f8f7f4;
@@ -460,6 +489,7 @@ h2 {
 .gs-login-form input {
   margin-bottom: 20px;
   width: 241px;
+  font-size: 14px;
 }
 
 .gs-login-popup button {
@@ -529,7 +559,6 @@ h2 {
 
 /*END HEADER*/
 
-
 /*MAIN*/
   /*SLIDER*/
 
@@ -539,12 +568,28 @@ h2 {
 }
 
 .gs-slider-item {
+  position: relative;
   display: none;
 }
 
+.gs-slider-item:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -120px;
+  width: 100%;
+  height: 100%;
+  background: -webkit-radial-gradient(center ellipse, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+}
+
 .gs-slider-item img {
+  position: relative;
   display: block;
+  width: 647px;
+  height: 582px;
   margin: 0 auto;
+  z-index: 20;
 }
 
 .gs-slider-item h2 {
@@ -553,6 +598,7 @@ h2 {
   bottom: 105px;
   width: 680px;
   margin-left: -340px;
+  z-index: 30;
 }
 
 .gs-slider-cta {
@@ -564,64 +610,63 @@ h2 {
   font-size: 30.77px;
   font-weight: 700;
   text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  z-index: 40;
 }
 
 .gs-slider-buttons {
   position: absolute;
-  left: auto;
-  bottom: 130px;
+  left: 0;
+  bottom: 75px;
 }
 
 .gs-slider-buttons label {
-  font-size: 0;
-}
-
-.gs-slider-buttons input[type="radio"] {
-  display: none;
-}
-
-.gs-slider-buttons input[type="radio"] + label {
-  position: relative;
   display: inline-block;
-  margin-right: 25px;
-  cursor: pointer;
-}
-
-.gs-slider-buttons input[type="radio"] + label:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 18px;
-  width: 18px;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+  vertical-align: top;
   border-radius: 50%;
   border: 2px solid #ffffff;
   background-color: transparent;
+  cursor: pointer;
 }
 
-.gs-slider-buttons input[type="radio"]:checked + label:after {
-  content: "";
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 18px;
-  height: 18px;
-  background-color: #ffffff;
-  border: 2px solid #ffffff;
-  border-radius: 50%;
+.gs-slider-buttons label:hover {
+  background-color: rgba(255,255,255, 0.4);
 }
 
-#btn1:checked ~ #slide1,
-#btn2:checked ~ #slide2,
-#btn3:checked ~ #slide3 {
+#btn1:checked ~ .gs-bgbody #slide1,
+#btn2:checked ~ .gs-bgbody #slide2,
+#btn3:checked ~ .gs-bgbody #slide3 {
   display: block;
+}
+
+#btn1:checked ~ .gs-bgbody {
+  background-color: #849d8f;
+}
+
+#btn2:checked ~ .gs-bgbody {
+  background-color: #8996a6;
+}
+
+#btn3:checked ~ .gs-bgbody {
+  background-color: #9d8b84;
+}
+
+#btn1:checked ~ .gs-bgbody label[for="btn1"],
+#btn2:checked ~ .gs-bgbody label[for="btn2"],
+#btn3:checked ~ .gs-bgbody label[for="btn3"] {
+  background-color: #ffffff;
 }
 
 /*BANNERS*/
 
 .gs-banner {
+  position: relative;
   margin: 0 -1.1%;
+  margin-top: -20px;
   margin-bottom: 40px;
+  z-index: 100;
 }
 
 .gs-banner-item {
@@ -670,17 +715,19 @@ h2 {
 /*PRODUCTS*/
 
 .gs-products {
-  margin: 0 -1.1%;
+  margin: 0 -2.2%;
   font-size: 0;
   vertical-align: top;
 }
 
 .gs-products-item {
+  position: relative;
+  padding: 1.1%;
+  padding-bottom: 50px;
   display: inline-block;
   vertical-align: top;
-  width: 22.8%;
+  width: 20.6%;
   margin: 0 1.1%;
-  margin-bottom: 42px;
 }
 
 .gs-products-item figure {
@@ -730,19 +777,37 @@ h2 {
 }
 
 .gs-products-item-title {
+  margin-bottom: 21px;
   font-size: 16px;
   line-height: 22px;
   text-align: center;
 }
 
-.gs-products-item-title a:after {
-  content: "";
+.gs-products-item-title a {
+  color: #ffffff;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(255,255,255, 0.3);
+}
+
+.gs-products-item-view {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: 1px solid #ffffff;
-  opacity: 0.4;
+  left: 10%;
+  display: none;
+}
+
+.gs-products-item:hover {
+  background-color: rgba(255,255,255, 0.2);
+  border-radius: 15px;
+  box-shadow: 0px 20px 20px 0.00px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.gs-products-item:hover .gs-products-item-view {
+  display: block;
+}
+
+.gs-products-item:hover .gs-products-item-title>a {
+  border-bottom: 0;
 }
 
 /*BREADCRUMBS*/
@@ -926,7 +991,7 @@ h2 {
 }
 
 .gs-subscribe-content .gs-input {
-  padding-right: 185px;
+  width: 63%;
 }
 
 .gs-subscribe-content .gs-btn {
@@ -939,18 +1004,17 @@ h2 {
   position: relative;
   width: 100%;
   height: 430px;
-  background-color: cornsilk;
+  background: #ece5c8 url("../img/tmp/map.jpg") no-repeat 50% 0;
 }
 
 .gs-contacts-content {
   position: relative;
-  height: 430px;
 }
 
 .gs-contacts-info {
   position: absolute;
   right: 0;
-  top: 14.7%;
+  top: -400px;
   padding: 30px 25px;
   width: 302px;
   background-color: rgba(255, 255, 255, 0.98);
@@ -1157,6 +1221,7 @@ h2 {
 .gs-footermenu li a {
   position: relative;
   font-weight: 400;
+  font-size: 13px;
 }
 
 .gs-footermenu li:first-child a {
@@ -1207,13 +1272,89 @@ h2 {
 .gs-author p>a {
   position: relative;
   font-weight: 400;
+  font-size: 12px;
 }
 
-.gs-author p>a:after {
+/*POPUP FORMS*/
+
+.gs-feedback-popup {
+  position: fixed;
+  left: 50%;
+  top: 20%;
+  display: none;
+  width: 477px;
+  padding: 19px 20px;
+  padding-bottom: 25px;
+  margin-left: -230px;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  z-index: 900;
+}
+
+.gs-feedback-popup h4 {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 23px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+.gs-feedback-close {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 18px;
+  height: 18px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.gs-feedback-close:before,
+.gs-feedback-close:after {
   content: "";
   position: absolute;
-  bottom: 0;
+  right: -3px;
+  top: 8px;
+  width: 23px;
+  height: 2px;
+  background-color: #3a3a39;
+  border-radius: 1px;
+}
+
+.gs-feedback-close:before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.gs-feedback-close:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.gs-feedback-form .gs-input {
+  width: 265px;
+  margin-bottom: 20px;
+}
+
+.gs-feedback-form .gs-textarea {
+  margin-bottom: 25px;
+}
+
+.gs-feedback-form .gs-btn {
+  float: right;
+}
+
+.gs-modal-overlay {
+  position: fixed;
+  top: 0;
   left: 0;
+  display: none;
   width: 100%;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 800;
 }
