--- a/css/style.css
+++ b/css/style.css
@@ -369,9 +369,10 @@ h2 {
 .gs-userblock {
   position: relative;
   float: right;
-  width: 22.8%;
+  width: 29.7%;
   padding: 20px 0;
   font-size: 0;
+  text-align: right;
 }
 
 .gs-top-btn {
@@ -454,6 +455,7 @@ h2 {
   /*LOGIN*/
 
 .gs-login {
+  width: 92px;
   padding-top: 6px;
   padding-bottom: 7px;
   padding-left: 44px;
@@ -461,6 +463,7 @@ h2 {
   margin-right: 10px;
   font-size: 14px;
   font-weight: 500;
+  box-sizing: border-box;
 }
 
 .gs-login:before {
@@ -478,11 +481,12 @@ h2 {
 .gs-login-popup {
   position: absolute;
   top: 60px;
-  right: 120px;
+  right: 125px;
   display: none;
   padding: 20px;
   background-color: #f8f7f4;
   border-radius: 5px;
+  box-shadow: 0px 20px 20px 0.00px rgba(0, 0, 0, 0.4);
   z-index: 200;
 }
 
@@ -512,21 +516,156 @@ h2 {
 
   /*CART*/
 
-.gs-small-cart {
+.gs-small-cart,
+.gs-small-cart-full {
+  width: 117px;
   padding-top: 6px;
   padding-bottom: 7px;
   padding-left: 44px;
-  padding-right: 22px;
+  padding-right: 15px;
   font-size: 14px;
   font-weight: 500;
+  box-sizing: border-box;
 }
 
-.gs-small-cart:before {
+.gs-small-cart {
+  padding-right: 33px;
+}
+
+.gs-small-cart:before,
+.gs-small-cart-full:before {
   left: 16px;
   bottom: 7px;
   width: 21px;
-  height: 20px;
+  height: 20px; 
+}
+
+.gs-small-cart:before {
   background-position: -31px -68px;
+}
+
+.gs-small-cart-full:before {
+  background-position: -52px -68px;
+}
+
+.gs-small-cart-popup {
+  position: absolute;
+  right: 0;
+  top: 60px;
+  z-index: 1;
+  display: none;
+  width: 540px;
+  padding: 20px 0;
+  padding-left: 17px;
+  padding-right: 14px;
+  font-size: 14px;
+  text-align: left;
+  background-color: #f8f7f4;
+  border-radius: 10px;
+  box-shadow: 0px 20px 20px 0.00px rgba(0, 0, 0, 0.4);
+  box-sizing: border-box;
+}
+
+.gs-small-cart-popup ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.gs-small-cart-popup-item {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 28px;
+  margin-bottom: 20px;
+}
+
+.gs-small-cart-popup-item:last-child {
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #cacac7;
+}
+
+.gs-small-cart-delete {
+  position: absolute;
+  left: 0;
+  top: 11px;
+  width: 13px;
+  height: 13px;
+  font-size: 0;
+  background-color: transparent;
+}
+
+.gs-small-cart-delete:before,
+.gs-small-cart-delete:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 1px;
+  width: 13px;
+  background-color: #323232;
+}
+
+.gs-small-cart-delete:before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.gs-small-cart-delete:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.gs-small-cart-img {
+  margin-right: 14px;
+  vertical-align: middle;
+  border-radius: 50%;
+}
+
+.gs-small-cart-name {
+  display: inline-block;
+  vertical-align: middle;
+  width: 215px;
+  margin-right: 32px;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 300;
+  text-decoration: none;
+  color: #323232;
+}
+
+.gs-small-cart-popup-item span {
+  font-size: 13px;
+  line-height: 16px;
+  color: #333333;
+}
+
+.gs-small-cart-popup-item span:nth-of-type(2) {
+  color: #999999;
+  margin-right: 32px;
+}
+
+.gs-small-cart-sum {
+  float: right;
+  text-align: right;
+}
+
+.gs-small-cart-overall {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 700;
+}
+
+.gs-small-cart-popup .gs-btn {
+  display: block;
+}
+
+.gs-small-cart-full:hover + .gs-small-cart-popup,
+.gs-small-cart-popup:hover {
+  display: block;
 }
 
   /*HEADER CONTACTS*/
@@ -535,7 +674,6 @@ h2 {
   position: absolute;
   right: 0;
   top: 75px;
-  width: 180px;
 }
 
 .gs-header-hours {
@@ -823,6 +961,7 @@ h2 {
 
 .gs-breadcrumbs-item {
   display: inline-block;
+  vertical-align: top;
   margin-right: 22px;
   position: relative;
 }
@@ -1047,10 +1186,16 @@ h2 {
   margin-bottom: 30px;
 }
 
+  /*CATALOG FILTER*/
+
 .gs-filter {
   width: 860px;
   text-align: left;
   margin-bottom: 40px;
+}
+
+.gs-filter-row {
+  margin-bottom: 18px;
 }
 
 .gs-filter-form-sort label,
@@ -1066,30 +1211,243 @@ h2 {
 }
 
 .gs-filter-form-sort {
+  position: relative;
   float: left;
-  width: 22.2%;
-  margin-right: 1.2%;
+  width: 194px;
+  margin-right: 14px;
+}
+
+.gs-filter-select-sort {
+  width: 100%;
+  padding-left: 16px;
+  padding-top: 10px;
+  padding-bottom: 9px;
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffffff;
+  background: none;
+  background-color: rgba(255,255,255, 0.3);
+  border: 0;
+  border-radius: 50px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+}
+
+.gs-filter-form-sort:after {
+  content: "";
+  position: absolute;
+  right: 15px;
+  top: 45px;
+  border-style: solid;
+  border-width: 5px 4px 0 4px;
+  border-color: #ffffff transparent transparent transparent;
+}
+
+.gs-filter-select-sort:hover {
+  background-color: #ffffff;
+  color: #323232;
+}
+
+.gs-filter-form-sort select:focus {
+  outline: 0;
 }
 
 .gs-filter-form-price {
   float: left;
-  width: 25.5%;
-  margin-right: 1.1%;
+  width: 220px;
+  margin-right: 14px;
+}
+
+.gs-range-controls {
+  position: relative;
+  width: 100%;
+  height: 36px;
+  padding-top: 17px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: rgba(255,255,255, 0.3);
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+
+.gs-range-controls .gs-range-scale {
+  height: 4px;
+  background-color: rgba(255,255,255, 0.5);
+}
+
+.gs-range-controls .gs-range-bar {
+  margin-left: 25px;
+  width: 110px;
+  height: 4px;
+  background-color: #ffffff;
+}
+
+.gs-range-controls .gs-range-toggle {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff; 
+  border-radius: 50%;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.gs-range-controls .gs-range-toggle-min {
+  left: 35px;
+}
+
+.gs-range-controls .gs-range-toggle-max {
+  left: 133px;
+}
+
+.gs-label-price input {
+  width: 25px;
+  color: #ffffff;
+  background: none;
+  border: 0;
+}
+
+.gs-label-price input:focus {
+  outline: 0;
 }
 
 .gs-filter-form-fatness {
   float: right;
-  width: 50%;
+  width: 415px;
+}
+
+.gs-filter-bg {
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  background-color: rgba(255,255,255, 0.3);
+  border-radius: 50px;
+  padding: 8px 16px;
+}
+
+.gs-filter-bg input[type="radio"] {
+  display: none;
+}
+
+
+.gs-filter-bg input[type="radio"] + label {
+  position: relative;
+  padding-left: 29px;
+  margin-right: 17px;
+}
+
+.gs-filter-bg input[type="radio"] + label:before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 19px;
+  height: 19px;
+  background-color: transparent;
+  border: 1px solid #f8f7f4;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.gs-filter-bg input[type="radio"] + label:hover:before {
+  left: -1px;
+  top: -1px;
+  border-width: 2px;
+}
+
+.gs-filter-bg input[type="radio"]:disabled + label:before {
+  left: 0;
+  top: 0;
+  border-width: 1px;
+  border-color: rgba(255, 255, 255, 0.4);
+}
+
+.gs-filter-bg input[type="radio"]:checked + label:after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 5px;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  background-color: #f8f7f4;
+  cursor: pointer;
+}
+
+.gs-filter-bg input[type="radio"]:disabled + label:after {
+  opacity: 0.4;
 }
 
 .gs-filter-form-filler {
   float: left;
-  width: 78%;
+  width: 703px;
+}
+
+.gs-filter-bg input[type="checkbox"] {
+  display: none;
+}
+
+.gs-filter-bg input[type="checkbox"] + label {
+  position: relative;
+  padding-left: 31px;
+  margin-right: 18px;
+}
+
+.gs-filter-bg input[type="checkbox"] + label:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 19px;
+  height: 19px;
+  background-color: transparent;
+  border: 1px solid #f8f7f4;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.gs-filter-bg input[type="checkbox"]:hover + label:before {
+  left: -1px;
+  top: -1px;
+  border-width: 2px;
+}
+
+.gs-filter-bg input[type="checkbox"]:disabled + label:before {
+  left: 0;
+  top: 0;
+  border-width: 1px;
+  opacity: 0.4;
+}
+
+.gs-filter-bg input[type="checkbox"]:checked + label:after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 3px;
+  width: 8px;
+  height: 3px;
+  background-color: transparent;
+  border: 3px solid #ffffff;
+  border-radius: 2px;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  cursor: pointer;
+}
+
+.gs-filter-bg input[type="checkbox"]:disabled + label:after {
+  opacity: 0.4;
 }
 
 .gs-filter-form-btn {
   float: right;
-  width: 22%;
+  margin-top: 26px;
+  width: 144px;
   text-align: right;
 }
 
@@ -1103,6 +1461,21 @@ h2 {
   cursor: pointer;
 }
 
+.gs-filter-form-btn button:hover {
+  background-color: #ffffff;
+  color: #323232;
+}
+
+.gs-filter-form-btn button:active {
+  padding: 9px 31px;
+  color: #323232;
+  box-shadow: inset 0px 2px 1px 0 #696969;
+  background-color: #eaeaea;
+  border: 0;
+}
+
+  /*PAGING*/
+
 .gs-paging {
   margin-bottom: 50px;
 }
@@ -1115,17 +1488,20 @@ h2 {
 
 .gs-paging li {
   display: inline-block;
-  vertical-align: top;
-  margin-right: 14px;
+  vertical-align: middle;
+  margin-right: 5px;
 }
 
 .gs-paging li a {
+  padding: 3px 9px;
   font-size: 16px;
   font-weight: 500;
+  text-decoration: none;
+  color: #ffffff;
 }
 
-.gs-paging li.active a {
-  padding: 3px 9px;
+.gs-paging li.active a,
+.gs-paging li:hover a {
   color: #323232;
   background-color: #ffffff;
   border-radius: 50%;
@@ -1134,9 +1510,20 @@ h2 {
 
 .gs-paging li:first-child a,
 .gs-paging li:last-child a {
-  font-size: 24px;
+  display: inline-block;
+  width: 8px;
+  height: 14px;
+  background: url("../img/paging-arrow.png") no-repeat;
 }
 
+.gs-paging li:last-child a {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.gs-paging .disabled {
+  opacity: 0.2;
+}
 
 /*FOOTER*/
 
@@ -1284,6 +1671,17 @@ h2 {
   z-index: 900;
 }
 
+.gs-feedback-show {
+  display: block;
+  -webkit-animation: fly 0.6s;
+  animation: fly 0.6s;
+}
+
+.gs-feedback-error {
+  -webkit-animation: shake 0.6s;
+  animation: shake 0.6s;
+}
+
 .gs-feedback-popup h4 {
   padding: 0;
   margin: 0;
@@ -1350,4 +1748,72 @@ h2 {
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
   z-index: 800;
+}
+
+@-webkit-keyframes fly {
+  0% {
+    -webkit-transform: translateY(-2000px);
+    transform: translateY(-2000px);
+  }
+  70% {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  90% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes fly {
+  0% {
+    -webkit-transform: translateY(-2000px);
+    transform: translateY(-2000px);
+  }
+  70% {
+    -webkit-transform: translateY(30px);
+    transform: translateY(30px);
+  }
+  90% {
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes shake {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
+}
+
+@keyframes shake {
+  0%, 100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  10%, 30%, 50%, 70%, 90% {
+    -webkit-transform: translateX(-10px);
+    transform: translateX(-10px);
+  }
+  20%, 40%, 60%, 80% {
+    -webkit-transform: translateX(10px);
+    transform: translateX(10px);
+  }
 }
