--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@ h2 {
 
 .gs-input,
 .gs-textarea {
-  position: relative;
   padding: 15px;
   font-size: 16px;
   font-family: "Roboto", "Arial", sans-serif;
@@ -133,6 +132,49 @@ h2 {
   padding: 14px;
   border-width: 2px;
   border-color: rgba(46,136,228, 0.52);
+}
+
+.gs-input + label {
+  position: absolute;
+  left: 30px;
+  top: 35px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999999;
+}
+
+.gs-textarea + label {
+  position: absolute;
+  left: 35px;
+  top: 240px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #999999;
+}
+
+.gs-input:focus + label,
+.gs-input.filled + label {
+  position: absolute;
+  left: 30px;
+  top: 4px;
+  font-size: 11px;
+  line-height: 13px;
+  color: #5b9ddf;
+}
+
+.gs-textarea:focus + label,
+.gs-textarea.filled + label {
+  position: absolute;
+  left: 35px;
+  top: 205px;
+  font-size: 11px;
+  line-height: 13px;
+  color: #5b9ddf;
+}
+
+.gs-input.filled + label,
+.gs-textarea.filled + label {
+  color: #999999;
 }
 
 /*END GENERAL*/
@@ -380,23 +422,6 @@ h2 {
   font-size: 14px;
 }
 
-.gs-input-hint {
-  position: absolute;
-  left: 30px;
-  top: 35px;
-  font-size: 16px;
-  line-height: 24px;
-  color: #999999;
-}
-
-.gs-input:focus + .gs-input-hint {
-  left: 30px;
-  top: 5px;
-  font-size: 11px;
-  line-height: 13px;
-  color: #5b9ddf;
-}
-
 .gs-search:hover + .gs-search-form {
   display: block;
 }
@@ -447,6 +472,24 @@ h2 {
   margin-bottom: 20px;
   width: 241px;
   font-size: 14px;
+}
+
+.gs-login-email + label[for="login-email"] {
+  left: 35px;
+}
+
+.gs-login-pass + label[for="login-pass"] {
+  top: 113px;
+  left: 35px;
+}
+
+.gs-login-pass:focus + label[for="login-pass"] {
+  top: 80px;
+}
+
+.gs-login-pass.filled + label[for="login-pass"] {
+  top: 80px;
+  color: #999999;
 }
 
 .gs-login-popup button {
@@ -1035,6 +1078,10 @@ h2 {
 .gs-blog-lastitem a {
   display: block;
   width: 286px;
+}
+
+.gs-blog-lastitem a>span {
+  display: inline;
   font-size: 24px;
   font-weight: 700;
   line-height: 30px;
@@ -1317,7 +1364,7 @@ h2 {
 .gs-filter-bg input[type="radio"] + label {
   position: relative;
   padding-left: 29px;
-  margin-right: 17px;
+  margin-right: 12px;
 }
 
 .gs-filter-bg input[type="radio"] + label:before {
@@ -1374,7 +1421,7 @@ h2 {
 .gs-filter-bg input[type="checkbox"] + label {
   position: relative;
   padding-left: 31px;
-  margin-right: 18px;
+  margin-right: 12px;
 }
 
 .gs-filter-bg input[type="checkbox"] + label:before {
@@ -1697,6 +1744,34 @@ h2 {
   margin-bottom: 20px;
 }
 
+input[name="feedback-name"] + label[for="feedback-name"] {
+  top: 85px;
+  left: 35px;
+}
+
+input[name="feedback-name"]:focus + label[for="feedback-name"] {
+  top: 55px;
+}
+
+input[name="feedback-name"].filled + label[for="feedback-name"] {
+  top: 55px;
+  color: #999999;
+}
+
+input[name="feedback-email"] + label[for="feedback-email"] {
+  top: 160px;
+  left: 35px;
+}
+
+input[name="feedback-email"]:focus + label[for="feedback-email"] {
+  top: 130px;
+}
+
+input[name="feedback-email"].filled + label[for="feedback-email"] {
+  top: 130px;
+  color: #999999;
+}
+
 .gs-feedback-form .gs-textarea {
   margin-bottom: 25px;
 }
@@ -1732,16 +1807,6 @@ h2 {
   -webkit-animation: shake 0.6s;
   animation: shake 0.6s;
 }
-
-.gs-onblur-label {
-  position: absolute;
-  left: 30px;
-  top: 5px;
-  font-size: 11px;
-  line-height: 13px;
-  color: #999999;
-}
-
 
 @media (min-width: 900px) {
   .gs-subscribe-content .gs-input {
